package com.tjudream.designpattern.decorator.general;

/**
 * 描述:
 * <p>
 * Created by mengxiansen on 2018-11-29 11:44
 *
 * @author mengxs@lenovocloud.com
 */
public abstract class Component {
    public abstract void operate();
}
